--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-sdk android:minSdkVersion="19"/>
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher" android:theme="@style/Theme.Rufoos">
         <activity android:name="LoginActivity"
-                  android:label="Login">
+                  android:label="RUFoos">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
@@ -15,5 +15,7 @@
         <activity android:name="SignUpActivity" android:label="SignUp" />
         <activity android:name="FoosActivity" android:label="RUFoos" />
         <activity android:name="SettingsActivity" android:label="Settings" />
+        <activity android:name="ChallengeActivity" android:label="Challenge" />
     </application>
 </manifest>
+
