--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,15 +6,16 @@
     <uses-sdk android:minSdkVersion="18"/>
     <uses-permission android:name="android.permission.INTERNET" />
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher" android:theme="@style/Theme.Rufoos">
-        <activity android:name="LoginActivity"
-                  android:label="RUFoos">
+        <activity android:name="SplashActivity"
+                  android:label="RuFoos">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name=".LoginActivity" android:label="Login" />
         <activity android:name="SignUpActivity" android:label="SignUp" />
-        <activity android:name="FoosActivity" android:label="RUFoos" />
+        <activity android:name="FoosActivity" android:label="Main Menu" />
         <activity android:name="SettingsActivity" android:label="Settings" />
         <activity android:name="ChallengeActivity" android:label="Challenge" />
         <activity android:name="QuickMatchActivity" android:label="Quick Match details" />
