--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,6 +5,7 @@
           android:versionName="1.0">
     <uses-sdk android:minSdkVersion="19"/>
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.VIBRATE"/>
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher" android:theme="@style/Theme.Rufoos">
         <activity android:name="SplashActivity"
                   android:label="RuFoos">
