--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -22,6 +22,7 @@
         <activity android:name="QuickMatchActivity" android:label="Quick Match details" />
         <activity android:name="TeamMatchRegistrationActivity" android:label="Team Match Signup" />
         <activity android:name=".ExhibitionRegistrationActivity" android:label="Exhibition Match Signup"/>
+        <activity android:name=".MatchListActivity" android:label="Match list"/>
     </application>
 </manifest>
 
