List of my teams displayed.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -22,7 +22,8 @@
         <activity android:name="QuickMatchActivity" android:label="Quick Match details" />
         <activity android:name="TeamMatchRegistrationActivity" android:label="Team Match Signup" />
         <activity android:name=".ExhibitionRegistrationActivity" android:label="Exhibition Match Signup"/>
-        <activity android:name=".MatchListActivity" android:label="Match list"/>
+        <activity android:name=".MatchListActivity" android:label="My matches"/>
+        <activity android:name=".TeamListActivity" android:label="My teams"/>
     </application>
 </manifest>
 
